[tool.poetry]
name = "hardwario-common"
version = "1.0.0"
description = "HARDWARIO Common"
authors = ["Karel Blavka <karel.blavka@hardwario.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/hardwario/py-hardwario-common"
repository = "https://github.com/hardwario/py-hardwario-common"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Environment :: Console"
]

packages = [
    { include = "hardwario", from = "src" },
]

exclude = [
    "**/*.pyc",
    "**/*.pyi",
]

include = [
    "LICENSE",
]

[tool.poetry.scripts]
hardwario = "hardwario.common.cli:main"

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.1.7"
loguru = "^0.7.2"
pycodestyle = "^2.11.1"

[tool.poetry.dev-dependencies]
pycodestyle = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

